supply-chain-practices/k8s/image-signing-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-signed-images
  annotations:
    policies.kyverno.io/title: Require Signed Images
    policies.kyverno.io/description: Ensures all pods use Cosign-signed images.
spec:
  validationFailureAction: enforce
  background: false
  rules:
  - name: check-image-signature
    match:
      any:
      - resources:
          kinds:
          - Pod
          namespaces:
          - secure-workloads
    verifyImages:
    - imageReferences:
      - "localhost:5000/*"
      attestors:
      - count: 1
        entries:
        - keys:
            publicKeys: |-
              -----BEGIN PUBLIC KEY-----
              MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEFy21zED9Dhd5y+7UkgY81SeeNeGL
[...]
              -----END PUBLIC KEY-----
